--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Nursery rhymes'
 - !lcsh 'Cats -- Juvenile poetry'
 - !lcc 'PZ'
+- GITenberg
 title: Aunt Affable's Story of Old Mother Bantry and Her Cat
 url: http://www.gutenberg.org/ebooks/45551
